--- a/package.json
+++ b/package.json
@@ -9,6 +9,31 @@
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
   },
+  "repository": {
+		"type": "git",
+		"url": "https://github.com/V-Py/svelte-color-picker"
+	},
+	"bugs": {
+		"url": "https://github.com/V-Py/svelte-color-picker/issues"
+	},
+	"author": {
+		"name": "Valentin Py",
+		"email": "valentin.pyb@gmail.com",
+		"url": "https://github.com/V-Py"
+	},
+	"keywords": [
+		"color",
+		"svelte",
+		"palette",
+		"colorpicker",
+		"colors",
+		"color-picker",
+		"picker",
+    "javascript"
+	],
+	"exports": {
+		".": "./Picker.svelte"
+	},
   "devDependencies": {
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
