--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "svelte-color-picker",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
-  },
-  "repository": {
+	"name": "svelte-material-color-picker",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"repository": {
 		"type": "git",
 		"url": "https://github.com/V-Py/svelte-color-picker"
 	},
@@ -29,19 +29,22 @@
 		"colors",
 		"color-picker",
 		"picker",
-    "javascript"
+		"javascript"
 	],
 	"exports": {
 		".": "./Picker.svelte"
 	},
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.10.1",
-    "tslib": "^2.3.1",
-    "typescript": "~4.5.4"
-  },
-  "type": "module"
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.10.1",
+		"tslib": "^2.3.1",
+		"typescript": "~4.5.4"
+	},
+	"type": "module",
+	"dependencies": {
+		"svelte2tsx": "^0.5.5"
+	}
 }
